# desktop-mcp

./: .gitignore  CLAUDE.md  pyproject.toml
desktop_mcp/: __init__.py  capture.py  input.py  models.py  ocr.py  safety.py  server.py  uia.py
tests/: conftest.py  test_capture.py  test_input.py  test_integration.py  test_models.py  test_safety.py  test_server.py
